feat: supabase database for form replies

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,11 +5,7 @@
     <li><a href="/portfolio">Portfolio</a></li>
     <li><a href="/pricing">Pricing</a></li>
     <li>
-      <button
-        data-tally-open="n0VxxP"
-        data-tally-emoji-text="👋"
-        data-tally-emoji-animation="wave">Let's talk</button
-      >
+      <button>Let's talk</button>
     </li>
   </ul>
 </nav>
