--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Form from "../components/Form.astro";
   </header>
 
   <main>
+    <Form />
     <h2>Design</h2>
     <p>
       We design. Check out our portfolio at the <a href="/portfolio"
@@ -31,11 +32,6 @@ import Form from "../components/Form.astro";
       delivering bug-free experience to your users painless.
     </p>
 
-    <button
-      class="button-wide"
-      data-tally-open="n0VxxP"
-      data-tally-emoji-text="👋"
-      data-tally-emoji-animation="wave">Let's talk</button
-    >
+    <button>Let's talk</button>
   </main>
 </Layout>
