--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props;
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <script async src="https://tally.so/widgets/embed.js"></script>
+    <script src="https://unpkg.com/@supabase/supabase-js"></script>
   </head>
   <body>
     <Navbar />
