--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -1,16 +1,39 @@
 ---
 ---
 
-<form name="hello">
-  <label for="exampleFormControlInput1"> Enter Your Name</label>
+<div class="form-popup" id="hello">
+  <form name="hello" class="form-container">
+    <label for="exampleFormControlInput1"> Enter Your Name</label>
 
-  <input type="text" id="name" placeholder="Enter your name" />
+    <input type="text" id="name" placeholder="Enter your name" />
 
-  <label for="exampleFormControlInput1"> Email address</label>
+    <label for="exampleFormControlInput1"> Email address</label>
 
-  <input type="email" id="email" placeholder="name@example.com" />
+    <input type="email" id="email" placeholder="name@example.com" />
 
-  <button type="button" id="submit">Submit</button>
-</form>
+    <button type="button" id="submit" onclick="closeForm()">Submit</button>
+  </form>
+</div>
+
+<style>
+  #hello {
+    display: none;
+  }
+
+  .form-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 15px;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+  }
+
+  .form-container {
+    max-width: 300px;
+    padding: 10px;
+    background-color: white;
+  }
+</style>
 
 <script src="./form.js"></script>
