--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -12,6 +12,11 @@
     align-items: center;
     justify-content: center;
   }
+
+  .homepage-logo h1 {
+    margin: 0;
+  }
+
   .home-img {
     margin: 1em;
     width: 5vw;
@@ -33,9 +38,9 @@
     box-shadow: none;
   }
 
-  @media only screen and (max-width: 900px) {
+  @media only screen and (max-width: 768px) {
     a .home-img {
-      width: 15vw;
+      width: 6em;
     }
   }
 </style>
