--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Navbar from "../components/Navbar.astro";
 const pageTitle = "Snoodev | Portfolio";
 const allProjects = await Astro.glob("./portfolio/*.md");
 
@@ -15,17 +14,17 @@ const projects = {
 <Layout title={pageTitle}>
   <header>
     <h1>{pageTitle}</h1>
-    <h2>Your next design, development & QA agency</h2>
+    <h2>Fast solutions for your small business</h2>
   </header>
 
   <main>
-    <h3>Here are a few projects we've done so far:</h3>
+    <h3>Few projects we've done so far</h3>
 
     {
       allProjects.map((project) => (
         <div>
-          <a style="display: block;" href={project.frontmatter.url}>
-            <figure style="display: inline-block;">
+          <a href={project.frontmatter.url}>
+            <figure>
               <img
                 src={project.frontmatter.image.url}
                 alt={project.frontmatter.image.alt}
@@ -33,15 +32,8 @@ const projects = {
               <figcaption>
                 <>
                   <h4>{project.frontmatter.name}</h4>
-                  <ul>
-                    <li>{project.frontmatter.description}</li>
-                    <li>
-                      🔗{" "}
-                      <a href={project.frontmatter.url} target="_blank">
-                        Check out their website here
-                      </a>
-                    </li>
-                  </ul>
+                  <p>
+                    {project.frontmatter.description}</p>
                 </>
               </figcaption>
             </figure>
@@ -53,6 +45,24 @@ const projects = {
 </Layout>
 
 <style>
+  header {
+    text-align: center;
+  }
+
+  h1 {
+    margin: 0;
+  }
+
+  h3 {
+    margin-bottom: 2em;
+  }
+
+  main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
   ul {
     padding: 0px;
     margin: 0px;
@@ -63,12 +73,13 @@ const projects = {
     list-style: none;
   }
   img {
-    width: 50vw;
+    width: fit-content;
     border-radius: 20px;
     margin-bottom: 1rem;
   }
 
   figure {
+    width: 50vw;
     display: flex;
     align-items: flex-start;
     justify-content: center;
@@ -76,7 +87,7 @@ const projects = {
     background-color: var(--color-bg-secondary);
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
     border-radius: 20px;
-    margin-bottom: 2em;
+    margin: 2em;
     padding: 2em;
     transition: transform 0.1s ease-in-out 0.1s;
     cursor: pointer;
@@ -92,6 +103,10 @@ const projects = {
   }
 
   figure figcaption {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
     color: #000;
   }
 
@@ -100,10 +115,19 @@ const projects = {
     margin: 0px;
   }
 
-  @media only screen and (max-width: 900px) {
-    a figure {
+  @media only screen and (max-width: 768px) {
+
+    figure {
       width: 75vw;
-      align-items: center;
+      padding: 2rem;
+    }
+
+    figure p {
+      font-size: medium;
+    }
+
+    figure a {
+      text-decoration: underline;
     }
   }
 </style>
