--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -32,8 +32,7 @@ const projects = {
               <figcaption>
                 <>
                   <h4>{project.frontmatter.name}</h4>
-                  <p>
-                    {project.frontmatter.description}</p>
+                  <p>{project.frontmatter.description}</p>
                 </>
               </figcaption>
             </figure>
@@ -116,7 +115,6 @@ const projects = {
   }
 
   @media only screen and (max-width: 768px) {
-
     figure {
       width: 75vw;
       padding: 2rem;
