fix: footer images & box shadow on figures

--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -97,6 +97,11 @@ const projects = {
     color: var(--color-link);
   }
 
+  a:hover {
+    box-shadow: none;
+
+  }
+
   figure:hover {
     transform: scale(1.03);
   }
