fix: image paths

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,7 +14,7 @@ let year = new Date().getFullYear();
     </div>
 
     <div class="footer-logo">
-      <img class="footer-img" src="./public/footer-logo.svg" alt="logo" />
+      <img class="footer-img" src="/footer-logo.svg" alt="logo" />
       <h4>Snoodev</h4>
     </div>
 
@@ -30,19 +30,19 @@ let year = new Date().getFullYear();
   <div class="lower-footer-wrapper">
     <div class="social-links">
       <a href="https://www.instagram.com/snoodev/" target="_blank">
-        <img src="./public/instagram.svg" alt="instagram-link" />
+        <img src="/instagram.svg" alt="instagram-link" />
       </a>
 
       <a href="https://snoodev.t.me" target="_blank">
-        <img src="./public/telegram.svg" alt="telegram-link" />
+        <img src="/telegram.svg" alt="telegram-link" />
       </a>
 
       <a href="mailto:hello@snoodev.com" target="_blank">
-        <img src="./public/email.svg" alt="send-email" />
+        <img src="/email.svg" alt="send-email" />
       </a>
 
       <a href="https://facebook.com/snoodev" target="_blank">
-        <img src="./public/facebook.svg" alt="facebook-link" />
+        <img src="/facebook.svg" alt="facebook-link" />
       </a>
     </div>
 
