--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -59,14 +59,14 @@ const { title } = Astro.props;
 
   @media (prefers-color-scheme: dark) {
     :root[color-mode="user"] {
-      --color-accent: #0097fc4f;
+      --color-accent: #f3a953;
       --color-bg: #333;
       --color-bg-secondary: #555;
-      --color-link: #0097fc;
-      --color-secondary: #e20de9;
-      --color-secondary-accent: #e20de94f;
+      --color-link: #f2f3f3;
+      --color-secondary: #f3a953;
+      --color-secondary-accent: #f3a953;
       --color-shadow: #bbbbbb20;
-      --color-table: #0097fc;
+      --color-table: #555;
       --color-text: #f7f7f7;
       --color-text-secondary: #aaa;
     }
@@ -385,22 +385,6 @@ const { title } = Astro.props;
   button[disabled]:hover,
   input[type="submit"][disabled]:hover {
     filter: none;
-  }
-
-  form {
-    border: 1px solid var(--color-bg-secondary);
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow) var(--color-shadow);
-    display: block;
-    max-width: var(--width-card-wide);
-    min-width: var(--width-card);
-    padding: 1.5rem;
-    text-align: var(--justify-normal);
-  }
-
-  form header {
-    margin: 1.5rem 0;
-    padding: 1.5rem 0;
   }
 
   input,
