--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Form from "../components/Form.astro";
 const pageTitle = "Snoodev | Portfolio";
 const allProjects = await Astro.glob("./portfolio/*.md");
 
@@ -18,6 +19,7 @@ const projects = {
   </header>
 
   <main>
+    <Form />
     <h3>Few projects we've done so far</h3>
 
     {
@@ -99,7 +101,6 @@ const projects = {
 
   a:hover {
     box-shadow: none;
-
   }
 
   figure:hover {
