feat; added privacy policy

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ let year = new Date().getFullYear();
     <div class="footer-links">
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="/services">Services</a></li>
         <li><a href="/portfolio">Portfolio</a></li>
       </ul>
     </div>
@@ -20,9 +20,9 @@ let year = new Date().getFullYear();
 
     <div class="footer-links-right">
       <ul>
-        <li><a href="/">Pricing</a></li>
-        <li><a href="/about">Privacy policy</a></li>
-        <li><a href="/portfolio">Something</a></li>
+        <li><a href="/pricing">Pricing</a></li>
+        <li><a href="/privacy-policy">Privacy policy</a></li>
+        <li><a href="/about">About us</a></li>
       </ul>
     </div>
   </div>
