--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 <nav class="desktop">
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/about">About</a></li>
+    <li><a href="/services">Services</a></li>
     <li><a href="/portfolio">Portfolio</a></li>
     <li><a href="/pricing">Pricing</a></li>
     <li>
