--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Toast from "../components/Toast.astro";
 ---
 
 <Layout title="Snoodev | Fast solutions for your small business">
-  <header>
+  <header data-aos="fade-in">
     <Logo />
     <div class="hero">
       <h2>Fast solutions for your small business</h2>
@@ -18,7 +18,7 @@ import Toast from "../components/Toast.astro";
 
   <main id="closeFormHomepage">
     <Form />
-    <section>
+    <section data-aos="fade-in">
       <h3>Design</h3>
       <p>
         We design. Check out our portfolio at the <a href="/portfolio"
@@ -29,7 +29,7 @@ import Toast from "../components/Toast.astro";
       </p>
     </section>
 
-    <section>
+    <section data-aos="fade-in">
       <h3>Development</h3>
       <p>
         We develop. Getting your MVP functional is a skill. We aim to minimize
@@ -38,7 +38,7 @@ import Toast from "../components/Toast.astro";
       </p>
     </section>
 
-    <section>
+    <section data-aos="fade-in">
       <h3>Consultancy</h3>
       <p>
         We also offer consultancy services for your small business
@@ -68,4 +68,8 @@ import Toast from "../components/Toast.astro";
   main.addEventListener("click", function closeForm() {
     form.style.display = "none";
   });
+
+  import AOS from "aos";
+  import "aos/dist/aos.css";
+  AOS.init();
 </script>
