--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,10 @@ import Toast from "../components/Toast.astro";
       </p>
     </section>
   </main>
+
+  <div data-aos="fade-in">
   <WideButton />
+</div>
 
   <Toast />
 </Layout>
