--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,6 @@ const { title } = Astro.props;
       rel="stylesheet"
     />
     <script src="https://unpkg.com/@supabase/supabase-js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <Navbar />
@@ -105,6 +104,10 @@ const { title } = Astro.props;
     margin: 5em auto;
     max-width: var(--width-content);
     padding: 1rem 1rem;
+  }
+
+  header {
+    text-align: center;
   }
 
   hr {
@@ -242,6 +245,7 @@ const { title } = Astro.props;
   p {
     margin: 0.75rem 0;
     padding: 0;
+    margin-bottom: 2em;
     width: 100%;
   }
 
