--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -3,6 +3,10 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Snoodev | Privacy Policy">
+  <header>
+    <h1>Snoodev | Privacy Policy</h1>
+  </header>
+
   <main>
     <pre>
     Snoodev ("we," "us," or "our") is committed to protecting the privacy of our customers ("you," "your," or "yours"). This Privacy Policy explains how we collect, use, and share information about you when you visit our website or use our services.<br /><br />
@@ -15,13 +19,20 @@ We take reasonable measures to protect your information from unauthorized access
 
 We may update this Privacy Policy from time to time to reflect changes in our practices or applicable laws. We encourage you to review this Privacy Policy periodically to stay informed about how we are protecting your information.<br /><br />
 
-If you have any questions about this Privacy Policy, please contact us at <a href="mailto:privacy@snoodev.com" target="_blank">privacy@snoodev.com</a>.
+If you have any questions about this Privacy Policy, please contact us at <a href="mailto:privacy@snoodev.com" target="_blank">privacy@snoodev.com</a>.<br /><br />
+
+Last updated: 10/12/2022.
 
 </pre>
   </main>
 </Layout>
 
 <style>
+  header,
+  h1 {
+    margin-bottom: 0;
+    text-align: center;
+  }
   pre {
     margin: 1rem 0;
     max-width: var(--width-card-wide);
